--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/ubuntu": "^5.0.3",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.12.2",
     "formik": "^2.4.6",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
