--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.0",
+    "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/ubuntu": "^5.0.3",
@@ -19,10 +19,13 @@
     "axios": "^1.12.2",
     "formik": "^2.4.6",
     "framer-motion": "^10.12.16",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^8.0.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.30.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
